syntax = "proto2";

package attachment;

message AttachmentInfo {
  required string uuid = 1;
  required string filepath = 2;
  required string name = 3;
  required string ext = 4;
  required uint64 size = 5;
  required string mime = 6;
  repeated uint64 messages = 7;
}

message AttachmentInfoList { repeated AttachmentInfo elements = 1; }
