syntax = "proto2";

package progress;

message Ticks {
  required uint64 count = 1;
  required string state = 2;
  required uint64 total = 3;
}

message LifecycleTransition {
  oneof transition {
    Started started = 1;
    TicksWithUuid ticks = 2;
    Stopped stopped = 3;
  }
}

message Started {
  required string uuid = 1;
  required string alias = 2;
}

message TicksWithUuid {
  required string uuid = 1;
  required Ticks ticks = 2;
}

message Stopped { required string uuid = 1; }
